# Fractals_Coursework_BSUIR

./: CMakeLists.txt  add.c  circle_fractal.c  dragon_fractal.c  fern.c  functions.h  globals.c  initialization.c  julia.c  main.c  mandel.c  mandelbrot.c  newton.c  random_fractal.c  sierpinski_carpet.c  sierpinski_triangle.c  tree.c  tree_unoptimized.c  ui.c  undo_stack.c  win32_save.c  win32_save.h
